--- a/DinkumChinese/DinkumChinese.csproj
+++ b/DinkumChinese/DinkumChinese.csproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <Compile Include="DinkumChinese.cs" />
     <Compile Include="ILPatch.cs" />
+    <Compile Include="KoreanCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartTranslatePatch.cs" />
     <Compile Include="StringReturnPatch.cs" />
