--- a/DinkumKorean/DinkumKorean.csproj
+++ b/DinkumKorean/DinkumKorean.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DinkumKorean</RootNamespace>
     <AssemblyName>DinkumKorean</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\BepInEx\plugins\</OutputPath>
+    <OutputPath>C:\Users\zeod\Downloads\DinkumKorean</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -36,35 +36,25 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\BepInEx\core\0Harmony.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx.Core">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\BepInEx\core\BepInEx.Core.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\BepInEx.Core.dll</HintPath>
     </Reference>
     <Reference Include="BepInEx.Unity">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\BepInEx\core\BepInEx.Unity.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\BepInEx.Unity.dll</HintPath>
     </Reference>
-    <Reference Include="I2LocPatch, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\BepInEx\plugins\I2LocPatch.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="I2LocPatch">
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\I2LocPatch.dll</HintPath>
     </Reference>
-    <Reference Include="LitJSON, Version=0.18.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\LitJson.0.18.0\lib\net45\LitJSON.dll</HintPath>
+    <Reference Include="LitJSON">
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\LitJSON.dll</HintPath>
     </Reference>
     <Reference Include="Mirror">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\Mirror.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\BepInEx\plugins\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\Mirror.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -75,56 +65,31 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\Unity.TextMeshPro.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AssetBundleModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\UnityEngine.AssetBundleModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.ImageConversionModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.ImageConversionModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\UnityEngine.ImageConversionModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.InputLegacyModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.TextCoreModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.TextCoreModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.TextRenderingModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\UnityEngine.InputLegacyModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.UI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.UIModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.UIModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.UNETModule">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\Dinkum_Data\Managed\UnityEngine.UNETModule.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="XYModLib">
-      <HintPath>D:\Games\SteamLibrary\steamapps\common\Dinkum\BepInEx\plugins\XYModLib.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\..\..\Downloads\DinkumDLL\XYModLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
