--- a/DinkumKorean/DinkumKorean.csproj
+++ b/DinkumKorean/DinkumKorean.csproj
@@ -94,9 +94,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DinkumKorean.cs" />
+    <Compile Include="DumpTool.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="ILPatch.cs" />
     <Compile Include="KoreanCheck.cs" />
+    <Compile Include="OtherPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpritePatch.cs" />
     <Compile Include="StartTranslatePatch.cs" />
